gibbon-compiler/examples/error/test28_copyprop.gib
#lang gibbon

(require "../../../ASTBenchmarks/grammar_racket.gib")
(require "../../../ASTBenchmarks/copyprop/treelang/copyprop.gib")

(copyprop (Expression (VARREF (quote x))))
